feat: add commiter

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GIT_AUTHOR_NAME: LSK.js
+          GIT_AUTHOR_EMAIL: lskjsru@gmail.com
+          GIT_COMMITTER_NAME: LSK.js
+          GIT_COMMITTER_EMAIL: lskjsru@gmail.com
         run: |
           echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc && \
           pnpm -r --workspace-concurrency=1 exec -- npx --no-install semantic-release -e semantic-release-monorepo
