--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,8 @@ jobs:
       - name: Build
         run: pnpm run build
 
-      # - name: Test
-      #   run: pnpm run test
+      - name: Test
+        run: pnpm run test
 
       - name: Release
         env:
