--- a/libs/plus/package.json
+++ b/libs/plus/package.json
@@ -53,33 +53,11 @@
       "limit": "0.4kb"
     }
   ],
-  "release": {
-    "branches": [
-      "main"
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/github",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "package.json",
-            "pnpm-lock.yaml",
-            "CHANGELOG.md"
-          ],
-          "message": "chore(release): 🎉 v${nextRelease.version}\n\n${nextRelease.notes}\n\n[skip ci]"
-        }
-      ]
-    ]
-  },
   "///": "//////////========================/////////========================/////////========================/////////",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ycmds/release-test-monorepo.git"
+    "url": "git+https://github.com/ycmds/release-test-monorepo.git",
+    "directory": "libs/plus"
   },
   "homepage": "https://github.com/ycmds/release-test-monorepo",
   "bugs": "https://github.com/ycmds/release-test-monorepo/issues",
